upgrade to Java24 (#64)
* upgrade to Java 24

* use a new port for each test to get around bind address still in use

* improve logging

* synchronize on this instead of fetchPublisherMap to fix bugs